Fix table spacing.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -30,3 +30,7 @@ canvas {
 #simulation-results {
   display: flex;
 }
+
+#simulation-table table {
+  border-spacing: 10px 2px;
+}
